--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
                                 class="fas fa-user"></i>
-                            Welcome Brand
+                            Welcome Kaushal
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="profile.html"><i class="fas fa-user"></i> Profile</a>
